# esp23-wraper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
tests/: cli.rs
vscode-extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: homeView.css  homeView.js  newProject.css  newProject.js  patchProject.js
vscode-extension/scripts/: install-local-vsix.mjs  package-vsix.mjs  run-tests.mjs  smoke-e2e.mjs
vscode-extension/src/: doctorPanel.ts  espwrapBinary.ts  espwrapCli.ts  extension.ts  formModel.test.ts  formModel.ts  homeView.ts  homeViewContent.ts  newProjectPanel.ts  patchPanel.ts  patchPanelContent.ts  webviewJson.ts
