[package]
name = "espwrap"
version = "0.2.0"
edition = "2024"
description = "Wrap esp-generate and patch project-local VS Code probe-rs config."
license = "MIT"
readme = "README.md"
keywords = ["esp32", "probe-rs", "vscode", "embedded", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
